--- a/challenge_1/client/styles/main.css
+++ b/challenge_1/client/styles/main.css
@@ -14,17 +14,19 @@
 }
 
 .title {
-  color: var(--main-text-color);
+  font-family: sans-serif;
   font-size: 2em;
   font-weight: 600;
-  font-family: sans-serif;
+  color: var(--main-text-color);
 }
 
 .page-number {
+  padding: 1rem;
   color: blue;
   cursor: pointer;
 }
 
-.page-number.selected {
+.page-number.selected,
+.page-number:hover {
   font-weight: 800;
 }
